2007-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new): Backport from Tim-Philipp Müller
	<tim at centricular dot net> to keep the seekbar in tune
	when using a fakesink for the output (Closes: #425458)

2007-04-11  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new): Follow the profiles set in the
	control-center if available (Closes: #428675)

============ Version 2.16.6

2007-03-19  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.16.6

2007-03-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Patch from
	Alexander Sack <asac@jwsdot.com> to keep the dbus-glib
	library in memory, to avoid crashes when switching themes
	(Closes: #415389)

2007-03-08  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_with_subtitle): Fix playback
	of Ogg Vorbis files by checking whether we have video
	before checking if it's supported, patch by Frédéric Crozat
	(Closes: #405883)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-wavpack to the supported
	mime-types list

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add video/x-matroska and audio/x-matroska
	as supported mime-types

2007-02-02  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt:
	* src/plparse/totem-pl-parser.c: Add support for application/ram

2007-01-30  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add video/x-theora+ogg to the list of supported
	mime-types

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: remove extraneous "grep -v" in the audio listing,
	spotted by Saleem Abdulrasool (Closes: #402193)

============ Version 2.16.5

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.16.5

2007-01-29  Bastien Nocera  <hadess@hadess.net>
