@@ -1,3 +1,12 @@
+2007-05-29  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bacon_video_widget_new):
+	* src/totem-menu.c: (totem_lang_table_parse_start_tag):
+	Fix a few run-time warnings
+	* src/totem.c: (main): Don't forget to init GStreamer
+	when in GTK+ only mode
+
 2007-04-18  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
